# MCMetal

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  LICENSE  OVERVIEW.md  PROJECT_GOVERNANCE.md  README.md  RISK_REGISTER.md  TODO.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
native/: CMakeLists.txt
native/include/: mcmetal_api.h  mcmetal_swift_bridge.h  mcmetal_version.h  metal_context.h
native/scripts/: build_macos.sh
native/src/: MetalContext.swift  RenderStateTracker.swift  jni_entrypoints.c  jni_entrypoints.cpp  metal_context.mm
src/main/java/io/github/mcmetal/: MCMetalClientMod.java  MCMetalMod.java
src/main/java/io/github/mcmetal/metal/: GlslToSpirvCompiler.java  MetalBootstrap.java  MetalBufferUploadBridge.java  MetalPhaseOneBridge.java  MetalRenderSystemBridge.java  MetalShaderLifecycleBridge.java  MetalShaderProgramBridge.java  MetalVertexDescriptorMapper.java  ShaderBindingMap.java  ShaderDiskCache.java  SpirvReflectionExtractor.java  SpirvToMslTranslator.java
src/main/java/io/github/mcmetal/metal/bridge/: HostPlatform.java  NativeApi.java  NativeBridgeException.java  NativeBridgeHandshake.java  NativeBridgeMetadata.java  NativeDebugFlags.java  NativeLibraryLoader.java  NativeStatus.java  package-info.java
src/main/java/io/github/mcmetal/mixin/: BufferBuilderMixin.java  RenderSystemMixin.java  ShaderProgramMixin.java  ShaderStageMixin.java  VertexBufferMixin.java
src/main/resources/: fabric.mod.json  mcmetal-native.properties  mcmetal.mixins.json
src/test/java/io/github/mcmetal/: MCMetalModTest.java
src/test/java/io/github/mcmetal/metal/: GlslToSpirvCompilerTest.java  MetalBufferUploadBridgeTest.java  MetalRenderSystemBridgeTest.java  MetalShaderLifecycleBridgeTest.java  MetalShaderProgramBridgeTest.java  MetalVertexDescriptorMapperTest.java  ShaderDiskCacheTest.java  SpirvReflectionExtractorTest.java  SpirvToMslTranslatorTest.java  VanillaShaderCorpusValidationTest.java
src/test/java/io/github/mcmetal/metal/bridge/: NativeBridgeHandshakeTest.java  NativeBridgeMetadataTest.java  NativeDebugFlagsTest.java  NativeStatusTest.java
